tests/pos/adhoc-extension/A.scala
//> using options -source future -deprecation -Xfatal-warnings

package adhoc
class A
abstract class Abs
