tests/neg/i11963b.scala
//> using options -Xfatal-warnings

open abstract class Foo // warn

// nopos-error: No warnings can be incurred under -Werror.
